<resources>
    <string name="app_name">学习</string>
    <string name="reciting">正在背诵</string>
    <string name="main_title">古诗词列表</string>
    <string name="menu">目录</string>
    <string name="grade_one">一年级</string>
    <string name="grade_two">二年级</string>
    <string name="grade_three">三年级</string>
    <string name="grade_four">四年级</string>
    <string name="grade_five">五年级</string>
    <string name="grade_six">六年级</string>
    <string name="recited">已背诵</string>
    <string name="grade_one_title">古诗列表</string>
    <string name="grade_one_poem1">咏鹅</string>
    <string name="grade_one_poem2">江南</string>
    <string name="grade_one_poem3">画</string>
    <string name="grade_one_poem4">悯农(其二)</string>
    <string name="grade_one_poem5">古朗月行</string>
    <string name="grade_one_poem6">风</string>
    <string name="grade_one_poem7">春晓</string>
    <string name="grade_one_poem8">赠汪伦</string>
    <string name="frame_title">成语典故</string>
    <string name="back_to_poem_list">返回</string>
    <string name="poem_prev">前一首</string>
    <string name="poem_next">后一首</string>
    <string name="poem_recited">背出来啦！</string>
    <string name="tab_recited">已完成</string>
    <string name="tab_reciting">正在背</string>
    <string name="tab_poem">古诗词</string>
    <string name="tab_idiom">成语典故</string>
    <string name="grade_button">年级列表</string>
    <string name="poet_button">诗人列表</string>
    <string name="reciting_list">正在背诵的古诗</string>
    <string name="recited_title">已背完的古诗</string>
    <string name="tab_search">古诗搜索</string>
    <string name="search_title">搜索:</string>
    <string name="search_hint">古诗词名</string>
    <string name="search_button">搜索 🔍</string>
    <string name="fhl_search_button">飞花令</string>
    <string name="switch_pinyin">拼音</string>


    <string-array name="main_list">
        <item>一年级</item>
        <item>二年级</item>
        <item>三年级</item>
        <item>四年级</item>
        <item>五年级</item>
        <item>六年级</item>
    </string-array>
    <string-array name="poem_grade_one_list">
        <item>咏鹅</item>
    </string-array>
    <string-array name="vocabulary_list">
        <item>afternoon</item>
    </string-array>
    <string-array name="wrong_list">
        <item>Who am I?</item>
    </string-array>
    <string-array name="idiom_list">
        <item>明修栈道，暗度陈仓</item>
    </string-array>

    <string name="track_selection_title">Select tracks</string>
</resources>
