<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/search_title"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/search_title"
            android:textSize="18dp"
            android:layout_marginBottom="0dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_text_input"
            app:hintTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/design_default_color_primary_dark"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:hint="@string/search_hint"
            android:layout_marginBottom="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:cursorVisible="true"
                android:text=""
                android:layout_marginBottom="0dp"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/search_button"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/search_button"
            android:layout_marginBottom="0dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/result_list"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </ListView>

</FrameLayout>
